# mindservlist

./: .env.dist  README.md  docker-compose.yml
app/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml
app/migrations/2020-03-02-221214_create_server/: down.sql  up.sql
app/migrations/2021-06-02-202401_add_fails/: down.sql  up.sql
app/migrations/2021-06-06-182432_add_last_seen/: down.sql  up.sql
app/src/: client.rs  db.rs  main.rs  mem_read.rs  schema.rs  server.rs
crawler/: Dockerfile  package.json  pm2.json
crawler/src/: app.js
traefik/: config-template.gtoml  config.toml
website/: index.html
website/css/: style.css
website/js/: main.js
