[package]
name = "rustry"
version = "0.0.1"
authors = ["Shawak <maxi.nussbaum@googlemail.com>"]
edition = "2018"
include = ["Cargo.toml", "**/*.rs"]

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.0", features = ["postgres"] }
diesel_migrations = { version = "1.4.0" }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
pear = "0.2.3"
pear_codegen = "0.2.3"

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["json", "serve"]

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
